--- a/resources/style.css
+++ b/resources/style.css
@@ -1,43 +1,39 @@
 
 
 
-header {
+.container {
+  display: flex;
   font-family: Verdana;
   font-size: 14px;
   font-weight: bold;
-}
-
-header span {
-  color: MediumAquamarine;
-  display: flex;
-
-  align-items: center;
-
-}
-
-.container {
-  display: flex;
   border-bottom: 1px solid black;
+}
 
+.container span {
+  color: MediumAquamarine;
+    align-items: center;
+}
+
+
+#logo img {
+  margin-right: 10px;
 }
 
 #logo {
+  display: flex;
   padding: 10px;
-}
-
-li {
-  display: inline-block;
-  padding: 15px;
+  align-items: center;
 }
 
 nav {
-  display: flex;
+
   justify-content: flex-end;
+  align-items: center;
 }
 
-ul {
-  display: flex;
-  justify-content: flex-end;
+nav span {
+  display: inline-block;
+  padding: 15px;
 }
 
 a {
