--- a/resources/style.css
+++ b/resources/style.css
@@ -87,6 +87,21 @@ a {
   width: 240px;
 }
 /*images*/
+.headline#main {
+  background-image: url("./images/img-story-main.png");
+}
+
+#earth {
+  background-image: url("./images/img-story-fall.png");
+}
+
+#camera {
+  background-image: url("./images/img-story-camera.png");
+}
+
+#cat {
+  background-image: url("./images/img-story-cat.png");
+}
 
 
 
@@ -95,4 +110,21 @@ a {
   font-family: Georgia;
   font-size: 17px;
   color: black;
+}
+
+#cat,
+#earth,
+#camera .headline {
+font-family: Georgia;
+  font-weight: bold;
+  font-size: 30px;
+  color: white;
+}
+
+
+#mother .headline {
+font-family: Georgia;
+  font-weight: bold;
+  font-size: 40px;
+  color: white;
 }
