--- a/resources/style2.css
+++ b/resources/style2.css
@@ -58,8 +58,7 @@ a {
   display: flex;
   padding-top: 80px;
   justify-content: center;
-
-}
+  }
 
 .main-container .large {
   display: flex;
@@ -67,7 +66,18 @@ a {
   flex-direction: column;
 }
 
-.article{
+.four-stories {
+  display: flex;
+  justify-content: space-between;
+}
+
+.two-stories {
+  display: flex;
+
+
+}
+
+.article {
   display: block;
 }
 
@@ -76,45 +86,30 @@ a {
 }
 
 /* images */
-.mother .headline {
+.mainstory .headline {
     background-image: url("./images/img-story-main.png");
     display: flex;
 }
 
-.image .earth {
+.imagestory .earth {
   background-image: url("./images/img-story-fall.png");
-  display: flex;
-  background-size: cover;
 }
 
-.image .camera {
+.imagestory .camera {
   background-image: url("./images/img-story-camera.png");
-  display: flex;
-  
-  background-size: cover;
 }
 
 .image {
-  width: 100%;
+  height: 300px;
+
+  display: flex;
 }
+
 /*
 }
 
-.column {
-  display: flex;
-  margin-top: 20px;
 
 
-
-}
-
-.column#large {
-  width: 630px;
-  margin: 20px;
-  display: flex;
-  flex-direction: column;
-
-}
 
 .column#medium {
   width: 300px;
@@ -129,9 +124,6 @@ a {
   flex-direction: column;
 }
 
-#mother {
-  display: block;
-}
 
 .newsbites .headline {
   font-size: 16px;
@@ -158,17 +150,7 @@ a {
 
 /*images*/
 /*
-.headline#main
 
-#earth {
-  background-image: url("./images/img-story-fall.png");
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-#camera {
-  background-image: url("./images/img-story-camera.png");
-}
 
 #cat {
   background-image: url("./images/img-story-cat.png");
