--- a/resources/style2.css
+++ b/resources/style2.css
@@ -85,8 +85,6 @@ a {
 
 .two-stories {
   display: flex;
-
-
 }
 
 .article {
@@ -97,6 +95,30 @@ a {
   display: block;
 }
 
+/* text*/
+
+.story {
+  font-family: Georgia;
+  font-size: 17px;
+  color: black;
+}
+
+h2 {
+  font-family: Georgia;
+  font-weight: bold;
+  font-size: 30px;
+  color: white;
+}
+
+.main-headline {
+  font-size: 60px;
+}
+
+h3 {
+
+}
+
+
 /* images */
 
 .image {
@@ -104,7 +126,7 @@ a {
   display: flex;
 }
 
-.mainstory .headline {
+.mainimage {
     background-image: url("./images/img-story-main.png");
     display: flex;
 }
