--- a/resources/style2.css
+++ b/resources/style2.css
@@ -85,6 +85,7 @@ a {
 
 .two-stories {
   display: flex;
+  flex-direction: column;
 }
 
 .article {
@@ -107,11 +108,16 @@ h2 {
   font-family: Georgia;
   font-weight: bold;
   font-size: 30px;
+  color: black;
+}
+
+.imagestory h2 {
   color: white;
 }
 
 .main-headline {
   font-size: 60px;
+  color: white;
 }
 
 h3 {
@@ -151,19 +157,6 @@ h3 {
 
 
 
-.column#medium {
-  width: 300px;
-  margin: 20px;
-  display: flex;
-}
-
-.column#small {
-  width: 240px;
-  margin: 20px;
-  display: flex;
-  flex-direction: column;
-}
-
 
 .newsbites .headline {
   font-size: 16px;
@@ -188,15 +181,7 @@ h3 {
   padding: 15px;
 }
 
-/*images*/
-/*
-
-
-#cat {
-  background-image: url("./images/img-story-cat.png");
-  background-repeat: no-repeat;
-  background-size: cover;
-}
+/
 
 .article {
   display: block;
