--- a/resources/style2.css
+++ b/resources/style2.css
@@ -198,22 +198,19 @@ footer {
 
 footer span {
   padding-right: 20px;
-  border-right: 2px solid white
   font-family: Georgia;
   font-size: 16px;
   font-weight: bold;
   color: white;
-
-
 }
 
 .info {
-  display: block;
+  display: flex;
+  align-items: center;
 }
 
 footer a {
   padding: 20px;
-
 }
 
 .copyright {
